Adiciona funções a pagina inicial
Cria função de verificação de formario
Cria função de mudar de pagina
Adiciona caminho do arquivo js no index

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
         <br>
         <input class="input-login" type="text" id="username" name="username" placeholder="Ex: Goku123" required>
       </div>
-      <button type="submit" disabled>Começar Jogo</button>
+      <button class="button-submit" type="submit" disabled>Começar Jogo</button>
     </form>
   </div>
+  <script src="js/initial.js"></script>
 </body>
 </html>
