--- a/pages/game.html
+++ b/pages/game.html
@@ -11,9 +11,19 @@
   <meta name="author" content="Yan Silva">
 
   <meta name="keywords" content="Game memory, jogo de memória, Dragon Ball, jogo, diversão">
+  
+  <link rel="stylesheet" href="../css/reset.css">
+  
+  <link rel="stylesheet" href="../css/game.css">
 
 </head>
 <body>
-    <h1>Tela do jogo</h1>
+    <header class="header">
+        <h1>Dragon Ball Memory Game</h1>
+        <br>
+        <p>Player: <span id="player-name"></span></p>
+    </header>
+
+    <script src="../js/game.js"></script>
 </body>
 </html>
