Adiciona imagens a pagina game
Adiciona imagens pelo jS
Cria funções para jogar o jogo
Modifica o html para adicionar imagens

--- a/pages/game.html
+++ b/pages/game.html
@@ -23,7 +23,10 @@
         <br>
         <p>Player: <span id="player-name"></span></p>
     </header>
-
+    
+    <div class="game-board">
+        <!-- cards aq pelo js -->
+    </div>
     <script src="../js/game.js"></script>
 </body>
 </html>
