--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
       </div>
       <button class="button-submit" type="submit" disabled>Começar Jogo</button>
     </form>
+    <div id="popup-som" class="popup">
+      <div class="popup-conteudo">
+        <p>Para melhor experiência, aceita ativar o som do jogo?</p>
+        <button id="aceitar-som">Aceitar</button>
+        <button id="recusar-som">Recusar</button>
+      </div>
+    </div>
   </div>
   <script src="js/initial.js"></script>
 </body>
