Adiciona trilha sonora a pagina

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <button id="recusar-som">Recusar</button>
       </div>
     </div>
+    <audio id="audio-jogo" src="songs/song theme game.mp3" preload="auto" loop></audio>
   </div>
   <script src="js/initial.js"></script>
 </body>
