Adiciona a trilha sonora na pagina do game
Modifica a função para continuar a musica na pagina do game
Cria a função de verificar a escolha do usuario na pagina game

--- a/pages/game.html
+++ b/pages/game.html
@@ -27,6 +27,7 @@
     <div class="game-board">
         <!-- cards aq pelo js -->
     </div>
+    <audio id="audio-jogo" src="../songs/song theme game.mp3" preload="auto" loop></audio>
     <script src="../js/game.js"></script>
 </body>
 </html>
