--- a/pages/game.html
+++ b/pages/game.html
@@ -21,7 +21,10 @@
     <header class="header">
         <h1>Dragon Ball Memory Game</h1>
         <br>
-        <p>Player: <span id="player-name"></span></p>
+        <p>
+        Player: <span id="player-name"></span>
+        Timer: <span id="timer" >00:00</span>
+        </p>
     </header>
     
     <div class="game-board">
