Adiciona popup vitoria do game
Cria um popup com estilo
Exibi informações da partida do player

--- a/pages/game.html
+++ b/pages/game.html
@@ -30,6 +30,24 @@
     <div class="game-board">
         <!-- cards aq pelo js -->
     </div>
+    <div id="popup-vitoria" class="popup">
+        <div class="popup-conteudo">
+            <h2 style="font-size: 24;">You Win!!!</h2>
+            <br>
+            <h3>Good luck</h3>
+            <span id="popup-player"></span>!</h2>
+            <br>
+            <br>
+            <p>You finished the game in <span id="popup-timer"></span></p>
+            <div>
+                <br>
+                <p>
+                    <button id="btn-reiniciar">Restart</button>
+                    <button id="btn-sair">Quit</button>
+                </p>
+            </div>
+        </div>
+    </div>
     <audio id="audio-jogo" src="../songs/song theme game.mp3" preload="auto" loop></audio>
     <script src="../js/game.js"></script>
 </body>
