Adiciona readme e prints e conserta erro no game
Conserta erro, musica toca apos rejeitar audio
Cria pasta com gifs do readme

--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
   <header class="header">
     <h1>Dragon Ball Memory Game</h1>
     <br>
-    <p>Desafie sua memória com os personagens de Dragon Ball</p>
+    <p>Challenge your memory with Dragon Ball characters</p>
   </header>
 
   <div class="container">
     <form class="login-form">
-      <h2>Entre no jogo</h2>
+      <h2>Get in the game</h2>
       <br>
-      <p>Digite seu nome para começar a jogar.</p>
+      <p>Enter your name to get started</p>
       <br>
       <div class="input-group">
-        <label for="username">Nome de jogador:</label>
+        <label for="username">Player name:</label>
         <br>
         <input class="input-login" type="text" id="username" name="username" placeholder="Ex: Goku123" required>
       </div>
-      <button class="button-submit" type="submit" disabled>Começar Jogo</button>
+      <button class="button-submit" type="submit" disabled>Start game</button>
     </form>
     <div id="popup-som" class="popup">
       <div class="popup-conteudo">
-        <p>Para melhor experiência, aceita ativar o som do jogo?</p>
-        <button id="aceitar-som">Aceitar</button>
-        <button id="recusar-som">Recusar</button>
+        <p>For a better experience, would you mind activating the game sound?</p>
+        <button id="aceitar-som">To accept</button>
+        <button id="recusar-som">Reject</button>
       </div>
     </div>
     <audio id="audio-jogo" src="songs/song theme game.mp3" preload="auto" loop></audio>
